kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: __CI_BUILD_REF_SLUG__
  namespace: __NAMESPACE__
  labels:
    app: __CI_BUILD_REF_SLUG__
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
spec:
  tls:
  - hosts:
    - __SUB_DOMAIN__.__BASE_URL__
    secretName: letsencrypt-prod
  rules:
  - host: __SUB_DOMAIN__.__BASE_URL__
    http:
      paths:
      - backend:
          serviceName: __CI_BUILD_REF_SLUG__
          servicePort: 80
